--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-308.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-1.21MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-313.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-772.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.55MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
   - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.27MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-4.12MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-474.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-356.1KB/s(Youtube:不良林), server: 36.134.154.119, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-3.54MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-455.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
