--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇳 中国-356.1KB/s(Youtube:不良林), server: 36.134.154.119, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-772.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-154.4KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-474.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-4.07MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-455.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-10.41MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇭🇰 香港-4.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -66,7 +66,6 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -89,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -105,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
@@ -130,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-154.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-455.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.41MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.06MB/s(Youtube:不良林)
